# rust-sk

./: Cargo.toml
migrations/: 20210104161243_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
tests/: health_check.rs
