[package]
name = "rust_sk"
version = "0.1.0"
authors = ["mbsd <mbsd@m0x.ru>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
serde = { version = "1.0.118", features = ["derive"] }

[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.22"
